UtahLiveDataTest/src/objects/POC_FinancialMain__c.object
<CustomObject>
    <fields>
        <fullName>AwardAmountFormula__c</fullName>
        <formula>VALUE(AwardAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardAmountFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <label>AwardAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveMonth__c</fullName>
        <label>EffectiveMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_FinancialBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC_FinancialBatch</label>
        <referenceTo>POC_FinancialBatch__c</referenceTo>
        <relationshipLabel>POC_FinancialMains</relationshipLabel>
        <relationshipName>POC_FinancialMains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>POC_FinancialMains</relationshipLabel>
        <relationshipName>POC_FinancialMains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POC_FinancialMains</relationshipLabel>
        <relationshipName>POC_FinancialMains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + FiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>POC_FinancialMain</label>
    <nameField>
        <label>POC_FinancialMain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC_FinancialMains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>